cluster/home/emqx/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: emqx
  namespace: home
spec:
  hosts:
  - mqtt.milton.mcf.io
  gateways:
  # - istio-ingress/cluster-ingress-gateway
  - home/emqx
  tcp:
  - match:
    - gateways:
      - home/emqx
    - port: 1883
    - port: 8883
    route:
    - destination:
        host: emqx.home.svc.cluster.local
        port:
          number: 1883
  # http:
  # - route:
  #   - destination:
  #       host: emqx.home.svc.cluster.local
  #       port:
  #         number: 18083
